<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/set_time_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/mon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_corner"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/day_short_monday"
                android:textColor="#FFFCFC"
                android:textSize="18sp" />

            <Button
                android:id="@+id/mon_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_corner"
                android:text="@string/dont_work"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/mon_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_corner"
                android:text="@string/dont_work"
                android:textColor="#FFFFFF" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_corner"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/day_short_tuesday"
                android:textColor="#FFFCFC"
                android:textSize="18sp" />

            <Button
                android:id="@+id/tue_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_corner"
                android:text="@string/dont_work"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/tue_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_corner"
                android:text="@string/dont_work"
                android:textColor="#FFFFFF" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_corner"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/day_short_wednesday"
                android:textColor="#FFFCFC"
                android:textSize="18sp" />
            <Button
                android:id="@+id/wed_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_corner"
                android:text="@string/dont_work"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/wed_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_corner"
                android:text="@string/dont_work"
                android:textColor="#FFFFFF" />


        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/thu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_corner"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/day_short_thursday"
                android:textColor="#FFFCFC"
                android:textSize="18sp" />

            <Button
                android:id="@+id/thu_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_corner"
                android:text="@string/dont_work"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/thu_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_corner"
                android:text="@string/dont_work"
                android:textColor="#FFFFFF" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_corner"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/day_short_friday"
                android:textColor="#FFFCFC"
                android:textSize="18sp" />


            <Button
                android:id="@+id/fri_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_corner"
                android:text="@string/dont_work"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/fri_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_corner"
                android:text="@string/dont_work"
                android:textColor="#FFFFFF" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_corner"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/day_short_saturday"
                android:textColor="#FFFCFC"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sat_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_corner"
                android:text="@string/dont_work"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/sat_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_corner"
                android:text="@string/dont_work"
                android:textColor="#FFFFFF" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/sun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_corner"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/day_short_sunday"
                android:textColor="#FFFCFC"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sun_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_corner"
                android:text="@string/dont_work"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/sun_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_corner"
                android:text="@string/dont_work"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_corner"
            android:text="@string/save"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>